// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions getTokenBalance 1`] = `
Array [
  Object {
    "type": "tokenBalance",
    "value": Object {
      "allowance": 222,
      "balance": 111,
    },
  },
]
`;

exports[`actions getTokenBalance 2`] = `
Array [
  Array [
    "code1",
    "0xAccount",
  ],
]
`;

exports[`actions getTokenBalance 3`] = `
Array [
  Array [
    "code1",
    "0xAccount",
  ],
]
`;

exports[`actions getTokenBalance dummy addr 1`] = `Array []`;

exports[`actions orderBookSnapshotUpdate 1`] = `
Object {
  "type": "orderBookSnapshot",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions orderBookSubscriptionUpdate 1`] = `
Object {
  "account": "account",
  "pair": "pair",
  "type": "orderBookSubscription",
}
`;

exports[`actions orderBookUpdate 1`] = `
Object {
  "type": "orderBookUpdate",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions orderHistoryUpdate 1`] = `
Object {
  "type": "orderHistory",
  "value": Array [
    Object {
      "test": "test",
    },
  ],
}
`;

exports[`actions orderUpdate 1`] = `
Object {
  "type": "order",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions subscribe 1`] = `
Array [
  Object {
    "account": "0xAccount",
    "pair": "",
    "type": "orderBookSubscription",
  },
  Object {
    "type": "userSubscription",
    "value": 0,
  },
  Object {
    "account": "0xAccount",
    "pair": "pair",
    "type": "orderBookSubscription",
  },
  Object {
    "type": "userSubscription",
    "value": 123,
  },
  Object {
    "type": "tokenBalance",
    "value": Object {
      "allowance": 222,
      "balance": 111,
    },
  },
]
`;

exports[`actions subscribe 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`actions subscribe 3`] = `
Array [
  Array [
    "0xAccount",
    "pair",
  ],
]
`;

exports[`actions subscribe dummy account 1`] = `
Array [
  Object {
    "account": "0x0000000000000000000000000000000000000000",
    "pair": "",
    "type": "orderBookSubscription",
  },
  Object {
    "type": "userSubscription",
    "value": 0,
  },
  Object {
    "account": "0x0000000000000000000000000000000000000000",
    "pair": "pair",
    "type": "orderBookSubscription",
  },
  Object {
    "type": "userSubscription",
    "value": 123,
  },
]
`;

exports[`actions subscribe dummy account 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`actions subscribe dummy account 3`] = `Array []`;

exports[`actions tokenBalanceUpdate 1`] = `
Object {
  "type": "tokenBalance",
  "value": Object {
    "allowance": 456,
    "balance": 123,
  },
}
`;

exports[`actions userSubscriptionUpdate 1`] = `
Object {
  "type": "userSubscription",
  "value": 123,
}
`;
